Fix overflow on mobile

--- a/src/app/components/card-preview/card-preview.component.scss
+++ b/src/app/components/card-preview/card-preview.component.scss
@@ -73,7 +73,7 @@
     flex-direction: column;
     align-items: center;
     font-size: 0.6em;
-
+    overflow: hidden;
     .card-preview {
         margin-top: -30px;
 
